# nhmesh-producer

./: .editorconfig  .gitignore  BUGFIX_UNHEALTHY_CONTAINERS.md  CD_SETUP_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.linux-x86_64  LICENSE  README.md  build.py  docker-compose.yml  gemini.md  pyproject.toml  pyrightconfig.json  ruff.toml  sample.env  test_alive.py  test_mqtt_listener.py
.github/: DEPLOYMENT_SETUP.md  copilot-instructions.md  dependabot.yml
.github/workflows/: build-and-release.yml  docker-deploy.yml  pyright-check.yml  release-please.yml  ruff-check.yml  test-build.yml  validate-pr-title.yml
docs/: github-actions.md  mqtt_listener.md  serial_interface_support.md
nhmesh_producer/: producer.py  web_interface.py
nhmesh_producer/templates/: dashboard.html  traceroute.html
nhmesh_producer/utils/: connection_manager.py  deduplicated_queue.py  envdefault.py  node_cache.py  number_utils.py  traceroute_manager.py
scripts/: create-release.sh  example_serial_usage.py  monitor_connections.py  test_serial_connection.py
tests/: reproduce_disconnect_loop.py  test_channel_names.py  test_mqtt_listener.py  test_packet_timeout.py
