[tool.poetry]
name = "nhmesh-producer"
version = "0.1.2"
description = "A resilient Meshtastic MQTT producer with automatic reconnection and connection health monitoring"
authors = ["grleblanc <greg@glsec.us>"]
readme = "README.md"
packages = [{include = "nhmesh_producer"}]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
paho-mqtt = ">=2.1.0,<3.0.0"
meshtastic = ">=2.6.4,<3.0.0"
protobuf = ">=4.21.12"
pypubsub = ">=4.0.3"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.11.7,<0.13.0"
pyright = {extras = ["nodejs"], version = ">=1.1.390,<2.0.0"}
types-paho-mqtt = ">=1.6.0.20240321,<2.0.0"
types-protobuf = ">=5.29.0,<6.0.0"
pyinstaller = ">=6.0.0,<7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
